<resources>
    <string name="app_name">AndroidERestaurant</string>
    <string name="bonjour_et_bienvenue_sur_androiderestaurant">Bonjour et bienvenue sur AndroidERestaurant</string>
    <string name="que_voulez_vous_commander">Que voulez vous commander ?</string>

    <string name="plats">Plats</string>
    <string name="desserts">Desserts</string>
    <string name="entr_es">Entrées</string>

    <string name="total">Total</string>
    <string name="basket_validation">Votre plat a bien été ajouté au panier</string>
    <string name="basket">Panier</string>
    <string name="order">Passer votre commande</string>
    <string name="quantity">Quantité :</string>

    <string name="registrationTitle">Création de votre compte</string>
    <string name="firstname">Prénom</string>
    <string name="lastname">Nom</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="register">Créer votre compte</string>

    <string name="login">Se connecter</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Connexion ou inscription</string>
    <string name="action_sign_in_short">Connexion</string>
    <string name="welcome">"Bienvenue !"</string>
    <string name="invalid_username">Prénom non valide</string>
    <string name="invalid_password">Le mot de passe doit avoir plus de 5 caractères</string>
    <string name="login_failed">"Connexion échouée"</string>
</resources>